map fixed div 1 z-index 1

--- a/app/assets/stylesheets/components/_badges.scss
+++ b/app/assets/stylesheets/components/_badges.scss
@@ -11,6 +11,7 @@
   white-space: nowrap;
   vertical-align: baseline;
   border-radius: 2px;
+  z-index: 0;
 }
 
 .number-badge {
